--- a/src/aura/ActionDetailsDynamicRow/ActionDetailsDynamicRow.cmp
+++ b/src/aura/ActionDetailsDynamicRow/ActionDetailsDynamicRow.cmp
@@ -12,7 +12,7 @@
     <!--task field row index -->
     <aura:attribute name="currentIndex" type="string"/>
     <!--Event attribute -->
-    <aura:registerEvent name="cadDynamicRowEvent" type="RDNACadence2:CadDynamicRowEvent"/>
+    <aura:registerEvent name="cadDynamicRowEvent" type="c:CadDynamicRowEvent"/>
     <!--Field header -->
     <aura:attribute name="fieldHeader" type="String" default="Field" />
     <aura:attribute name="valueHeader" type ="String" default="Value"/> 
@@ -66,9 +66,6 @@
             
             <aura:set attribute="else">
                 <aura:if isTrue="{!v.dataType == 'Boolean'}">
-                 <!--   <aura:if isTrue="{!v.currentIndex == 0}">
-                        <label class="slds-form-element__label" for="input-01">Values</label>
-                    </aura:if>-->
                     <lightning:select aura:id="formValidationId" name="selectBooleanType" 
                                       variant = "label-hidden" required="true" value="{!v.taskObj.value}" 
                                       messageWhenValueMissing="Please Select Field Value" disabled = "{!v.isDisabled}">
@@ -127,7 +124,7 @@
                                     <aura:set attribute="else">
                                         <aura:if isTrue="{!v.dataType == 'Reference'}">
                                             <div class=" ">
-                                                <RDNACadence2:LookupFieldComponent aura:id="LookupFieldComponentInAD" recordType="{!v.recordType}"  isDisabled="{!v.isDisabled}"
+                                                <c:LookupFieldComponent aura:id="LookupFieldComponentInAD" recordType="{!v.recordType}"  isDisabled="{!v.isDisabled}"
                                                                                   parentId="{!v.taskObj.value}" fieldName="{!v.fieldName}" />
                                             </div>
                                             <aura:set attribute="else">
