--- a/src/aura/CadenceListView/CadenceListView.cmp
+++ b/src/aura/CadenceListView/CadenceListView.cmp
@@ -1,4 +1,4 @@
-<aura:component controller="RDNACadence2.CadenceActionListController" implements="flexipage:availableForRecordHome,flexipage:availableForAllPageTypes,force:hasRecordId,force:lightningQuickAction,force:appHostable" access="global">
+<aura:component controller="CadenceActionListController" implements="flexipage:availableForRecordHome,flexipage:availableForAllPageTypes,force:hasRecordId,force:lightningQuickAction,force:appHostable" access="global">
     
     <!-- attributes -->
     <aura:attribute name="data" type="List"/>
@@ -21,11 +21,11 @@
     
     <!--handlers-->
     <aura:handler name="init" value="{! this }" action="{! c.init }"/>
-    <aura:handler name="cadencePagination" event="RDNACadence2:CadPagination" action="{!c.handleComponentEvent}"/>
+    <aura:handler name="cadencePagination" event="c:CadPagination" action="{!c.handleComponentEvent}"/>
     
     <!--create a component attributs -->
     <aura:attribute name="spinner" type="boolean" default="false"/>
-    <RDNACadence2:SpinnerComponent spinnerSync = "{!v.spinner}"/>
+    <c:SpinnerComponent spinnerSync = "{!v.spinner}"/>
     
     <!-- Theme Name Attribute -->
     <aura:attribute name="themeName" type="String"/>
@@ -73,7 +73,7 @@
         </div>
         
         <div class="slds-m-bottom_medium">
-             <RDNACadence2:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}"/>	
+             <c:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}"/>	
         </div>
         
         
