--- a/src/aura/DynamicActionDetails/DynamicActionDetails.cmp
+++ b/src/aura/DynamicActionDetails/DynamicActionDetails.cmp
@@ -1,4 +1,4 @@
-<aura:component controller="RDNACadence2.ActionDetailController" implements="flexipage:availableForRecordHome,flexipage:availableForAllPageTypes,force:hasRecordId,force:lightningQuickAction,force:appHostable" access="global">
+<aura:component controller="ActionDetailController" implements="flexipage:availableForRecordHome,flexipage:availableForAllPageTypes,force:hasRecordId,force:lightningQuickAction,force:appHostable" access="global">
     <!--aura init handler , call js "loadData" function on component load, and display data on form-->
     <aura:handler name="cadDynamicRowEvent" event="RDNACadence2:CadDynamicRowEvent" action="{!c.handleCadDynamicRowEvent}"/>
     <aura:attribute name="actionList" type = "List" />
@@ -45,7 +45,7 @@
     <aura:attribute name = "setActionTypeList" type = "Boolean" default = "false"/>
     <aura:attribute name="actionTypeList" type = "List" />  
     <aura:attribute name="spinner" type="boolean" default="false"/>  
-    <RDNACadence2:SpinnerComponent spinnerSync = "{!v.spinner}"/>
+    <c:SpinnerComponent spinnerSync = "{!v.spinner}"/>
     
     <aura:attribute name="activationtypeList" type="List" default="['Automatic', 'Manual']" />
     <!-- PAGE HEADER -->
@@ -114,7 +114,7 @@
                         <div class = "slds-form-element slds-size_1-of-1 slds-hide" aura:id = "createTaskdiv">
                             <aura:iteration items="{!v.listTask}" var="taskObj" indexVar="index">
                                 <div class = "slds-form-element__row slds-size_1-of-1">
-                                    <RDNACadence2:ActionDetailsDynamicRow aura:id="dynamicROw"  taskObj="{!taskObj}" wrapperTaskFields="{!v.wrapperTaskFields}" currentIndex = "{!index}" listPicklistValues="" dataType = ""/>
+                                    <c:ActionDetailsDynamicRow aura:id="dynamicROw"  taskObj="{!taskObj}" wrapperTaskFields="{!v.wrapperTaskFields}" currentIndex = "{!index}" listPicklistValues="" dataType = ""/>
                                 </div>
                             </aura:iteration>
                             <div class = "slds-form-element__row slds-size_1-of-1">
